# okular-backend-mupdf

./: .gitignore  CMakeLists.txt  document.cpp  generator_mupdf.cpp  libokularGenerator_mupdf.json  page.cpp
arch/: PKGBUILD
cmake/modules/: FindMuPDF.cmake
